# money-assistant

./: README.md  docker-compose.yaml
.github/workflows/: docker-image.yml  pylint.yml
backend/: backend.dockerfile
backend/app/: .pylintrc  alembic.ini  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 5f595d52d612_add_project_table.py  6ce6180bc2ed_added_user_table.py  7bfdb7165e67_add_payment_models.py
backend/app/app/: initial_data.py  main.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: login.py  users.py
backend/app/app/core/: config.py  security.py
backend/app/app/crud/: base.py  crud_user.py
backend/app/app/db/: init_db.py  session.py
backend/app/app/models/: __init__.py  base_model.py  payments.py  project.py  user.py
backend/app/app/schemas/: __init__.py  project.py  user.py
