[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["5c0rp <tereshchenko.srg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.70.1"}
sqlmodel = "^0.0.6"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
