[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["5c0rp <tereshchenko.srg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {version = "^0.72", extras = ["all"]}
sqlmodel = "^0.0.6"
alembic = "^1.7.5"
psycopg2-binary = "^2.9.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
emails = "^0.6"
uvloop = "^0.16.0"
pylint = "^2.13.7"
pylint-pydantic = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
